--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    
-    
+
+<!--add permission to use internet connection    -->
 <uses-permission-sdk-23 android:name="android.permission.INTERNET"></uses-permission-sdk-23>
 
 
